# jellyfin-renamer

./: .gitignore  Cargo.toml  README.md  install.bat  jellyfin_rename.py  main.py  uninstall.bat
installer/: install.bat  menu-option.reg  uninstall.bat
registry/: menu-option.reg
src/: instance_coordinator.rs  lib.rs  main.rs  popup.rs  rename_engine.rs  tui.rs
src/tui/: app.rs  app_logic.rs  events.rs  models.rs  processing.rs  rendering.rs  utils.rs
tests/: imdb_test_summary.rs  instance_coordinator_tests.rs  manual_imdb_test.rs  quick_imdb_test.rs  rename_engine_tests.rs
