[package]
name = "jellyfin-rename"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["blocking"] }
scraper = "0.23.1"
regex = "1.11.1"
